syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

package ohlcv;

service OhlcvApi {
  rpc Get(GetSymRequest) returns (GetSymResponse) {}
}

message GetOhlcvRequest {
  string sym_id = 1;
  Timeframe timeframe = 2;
}

message GetOhlcvResponse {
  repeated OhlcvBar bars = 1;
}

message OhlcvBar {
  google.protobuf.Timestamp open_time = 1;
  google.protobuf.Timestamp close_time = 2;
  double open = 3;
  double high = 4;
  double low = 5;
  double close = 6;
  double volume = 7;
}

message Timeframe {
  oneof value {
    int32 years = 1;
    int32 months = 2;
    int32 weeks = 3;
    int32 days = 4;
    int32 hours = 5;
    int32 minutes = 6;
    int32 seconds = 7;
    int32 ticks = 8;
    int32 ranges = 9;
    google.protobuf.Empty unknown = 10;
  }
}
